--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, #532989, #dfd9ece5), url('../img/background.jpg') no-repeat right fixed;
+    background: linear-gradient(to top, #532989, #dfd9ece5), url('../frontend/client/img/background.jpg') no-repeat right fixed;
     background-repeat: no-repeat;
     background-size: cover;
     overflow-x: hidden;
